# ai-business-automation-dashboard

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ai-business-automation-dashboard.code-workspace  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  test.db  test_engine.py  validate_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_integrations.py  003_performance_optimization.py
backend/app/: db.py  main.py
backend/app/api/routes/: classification.py  collaboration.py  executions.py  health.py  integrations.py  logs.py  schedules.py  templates.py  triggers.py  workflow_versions.py  workflows.py
backend/app/cache/: __init__.py  cache_manager.py
backend/app/db/: __init__.py  optimization.py
backend/app/engine/: branching_executor.py  dag_parser.py  exceptions.py  loop_executor.py  parallel_executor.py  retry_policy.py  step_executor.py  workflow_engine.py
backend/app/integrations/: __init__.py  email.py  hubspot.py  slack.py  webhook.py
backend/app/middleware/: caching.py
backend/app/models/: __init__.py  alert.py  execution.py  execution_log.py  integration.py  template.py  trigger.py  workflow.py  workflow_version.py
backend/app/rules/: __init__.py  classification_rules.py
backend/app/schemas/: __init__.py  classification.py  execution.py  integration.py  log.py  schedule.py  template.py  trigger.py  workflow.py
backend/app/services/: __init__.py  alerting_service.py  classification_service.py  collab_sync.py  custom_integration.py  encryption.py  integration_base.py  logging_service.py  scheduler_service.py  trigger_service.py  versioning_service.py
backend/middleware/: audit.py  rbac.py  tenant.py
backend/models/: audit_log.py  role.py  tenant.py  user.py
backend/routers/: analytics.py  audit.py  auth.py  rbac.py  tenants.py
backend/services/: analytics_service.py  auth_service.py  tenant_service.py
backend/tests/: conftest.py  test_caching.py  test_classification.py  test_engine.py  test_health_status.py  test_integrations.py  test_logging.py  test_scheduler.py  test_triggers.py
docs/: ARCHITECTURE.md  COLLABORATIVE_EDITING.md  CUSTOM_INTEGRATIONS.md  FEATURES.md  FRONTEND_BUILD_COMPLETE.md  FRONTEND_IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  PROJECT_SPEC.md  QA_VALIDATION_REPORT.md  ROADMAP.md  TIERED_ROADMAP.md  (+4 more)
(+151 files in other folders)
